Changes from version 1.3.6 to 1.3.7:
  * Changed testthat tests due to changes in testthat package.