@@ -1,2 +1,4 @@
+Changes from version 1.3.7 to 1.3.8:
+  * Updated to libeemd 1.4, see libeemd's changelog: https://bitbucket.org/luukko/libeemd
 Changes from version 1.3.6 to 1.3.7:
   * Changed testthat tests due to changes in testthat package.
